--- a/Interfaces/zh-Hant.lproj/RSSFeed.strings
+++ b/Interfaces/zh-Hant.lproj/RSSFeed.strings
@@ -25,3 +25,6 @@
 /* Class = "NSTextFieldCell"; title = "Edit subscription"; ObjectID = "114"; */
 "114.title" = "編輯訂閱頻道";
 
+/* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
+"116.title" = "在 Open Reader 中訂閱";
+
