--- a/Interfaces/zh-Hant.lproj/SyncingPreferencesView.strings
+++ b/Interfaces/zh-Hant.lproj/SyncingPreferencesView.strings
@@ -1,9 +1,30 @@
+/* Class = "NSButton"; ibExternalAccessibilityDescription = "Visit the website"; ObjectID = "Ar5-Qc-YTe"; */
+"Ar5-Qc-YTe.ibExternalAccessibilityDescription" = "瀏覽網站";
+
 /* Class = "NSButton"; ibShadowedToolTip = "Visit the website"; ObjectID = "Ar5-Qc-YTe"; */
 "Ar5-Qc-YTe.ibShadowedToolTip" = "Visit the website";
+
+/* Class = "NSButtonCell"; title = "Sync with an Open Reader server"; ObjectID = "Lkv-md-rEW"; */
+"Lkv-md-rEW.title" = "與 Open Reader 伺服器進行同步";
 
 /* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "NKI-36-zCY"; */
 "NKI-36-zCY.title" = "密碼：";
 
 /* Class = "NSTextFieldCell"; title = "Login:"; ObjectID = "O2q-8o-CSb"; */
 "O2q-8o-CSb.title" = "帳號：";
+
+/* Class = "NSTextField"; ibShadowedToolTip = "Select a server supporting the Open Reader API"; ObjectID = "kM0-7a-obO"; */
+"kM0-7a-obO.ibShadowedToolTip" = "選擇支援 Open Reader API 的伺服器";
+
+/* Class = "NSTextFieldCell"; title = "URL: https://"; ObjectID = "tec-2d-Xej"; */
+"tec-2d-Xej.title" = "網址：https://";
+
+/* Class = "NSTextFieldCell"; title = "Server:"; ObjectID = "uTl-XE-0ym"; */
+"uTl-XE-0ym.title" = "伺服器：";
+
+/* Class = "NSTextField"; ibShadowedToolTip = "Address of a server supporting the Open Reader API"; ObjectID = "vZE-Pl-S9H"; */
+"vZE-Pl-S9H.ibShadowedToolTip" = "支援 Open Reader API 的伺服器位址";
+
+/* Class = "NSPopUpButton"; ibExternalAccessibilityDescription = "Select a server supporting the Open Reader API"; ObjectID = "zAy-oc-zmb"; */
+"zAy-oc-zmb.ibExternalAccessibilityDescription" = "選擇支援 Open Reader API 的伺服器";
 
