--- a/Interfaces/cs.lproj/MainWindowController.strings
+++ b/Interfaces/cs.lproj/MainWindowController.strings
@@ -52,6 +52,9 @@
 /* Class = "NSToolbarItem"; paletteLabel = "Add"; ObjectID = "CPA-Ha-aj1"; */
 "CPA-Ha-aj1.paletteLabel" = "Přidat";
 
+/* Class = "NSToolbarItem"; label = "All Read"; ObjectID = "Gyz-dq-ewv"; */
+"Gyz-dq-ewv.label" = "Všechny přečtené";
+
 /* Class = "NSMenuItem"; title = "Refresh Selected Subscriptions"; ObjectID = "Hs0-hu-A2g"; */
 "Hs0-hu-A2g.title" = "Obnovit vybraná odebírání";
 
