--- a/Vienna Tests/cs.lproj/Localizable.strings
+++ b/Vienna Tests/cs.lproj/Localizable.strings
@@ -1,3 +1,6 @@
+/* {existing authors},{new author name} */
+"%@, %@" = "%1$@, %2$@";
+
 /* No comment provided by engineer. */
 "(No title)" = "(není titul)";
 
@@ -132,4 +135,7 @@
 
 /* test for a date */
 "is on or before" = "je nebo před";
+
+/* test for a folder (not operational as of Vienna 3.2) */
+"under" = "pod";
 
