--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,10 @@ most recent build should be at the top of this file.
 
 Thanks!
 
+3.2.0 Beta 2
+------------
+- Fix crashes on systems prior to Sierra
+
 3.2.0 Beta 1
 ------------
 ### ! For OS X 10.9 or later only !
