--- a/Localizations/de.xliff
+++ b/Localizations/de.xliff
@@ -72,7 +72,10 @@
       <trans-unit id="B5v-p5-vrf.title">
         <source>Folder list font:</source>
         <note>Class = "NSTextFieldCell"; title = "Folder list font:"; ObjectID = "B5v-p5-vrf";</note>
-        <target xml:lang="de" state="translated">Ordnerliste:</target>
+        <target xml:lang="de" state="translated">Font für Ordnerliste:</target>
+        <alt-trans>
+          <target xml:lang="de">Ordnerliste:</target>
+        </alt-trans>
       </trans-unit>
       <trans-unit id="BDw-v3-mpF.title">
         <source>Select…</source>
@@ -852,6 +855,11 @@
         <source>Open Article Page in External Browser</source>
         <note>Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067";</note>
         <target xml:lang="de" state="translated">Öffne Artikelseite im externen Browser</target>
+      </trans-unit>
+      <trans-unit id="1073.title">
+        <source>Send Link by Email</source>
+        <note>Class = "NSMenuItem"; title = "Send Link by Email"; ObjectID = "1073";</note>
+        <target xml:lang="de" state="translated">Link per E-Mail senden</target>
       </trans-unit>
       <trans-unit id="1084.title">
         <source>Bigger Text</source>
@@ -1690,6 +1698,11 @@
         <note>Class = "NSTextFieldCell"; title = "Login:"; ObjectID = "O2q-8o-CSb";</note>
         <target xml:lang="de" state="translated">Benutzername:</target>
       </trans-unit>
+      <trans-unit id="kM0-7a-obO.ibShadowedToolTip">
+        <source>Select a server supporting the Open Reader API</source>
+        <note>Class = "NSTextField"; ibShadowedToolTip = "Select a server supporting the Open Reader API"; ObjectID = "kM0-7a-obO";</note>
+        <target xml:lang="de" state="translated">Wähle einen Server, der das Open Reader API unterstützt</target>
+      </trans-unit>
       <trans-unit id="tec-2d-Xej.title">
         <source>URL: https://</source>
         <note>Class = "NSTextFieldCell"; title = "URL: https://"; ObjectID = "tec-2d-Xej";</note>
@@ -1699,6 +1712,16 @@
         <source>Server:</source>
         <note>Class = "NSTextFieldCell"; title = "Server:"; ObjectID = "uTl-XE-0ym";</note>
         <target xml:lang="de" state="translated">Server:</target>
+      </trans-unit>
+      <trans-unit id="vZE-Pl-S9H.ibShadowedToolTip">
+        <source>Address of a server supporting the Open Reader API</source>
+        <note>Class = "NSTextField"; ibShadowedToolTip = "Address of a server supporting the Open Reader API"; ObjectID = "vZE-Pl-S9H";</note>
+        <target xml:lang="de" state="translated">Adresse eines Servers, der das Open Reader API unterstützt</target>
+      </trans-unit>
+      <trans-unit id="zAy-oc-zmb.ibExternalAccessibilityDescription">
+        <source>Select a server supporting the Open Reader API</source>
+        <note>Class = "NSPopUpButton"; ibExternalAccessibilityDescription = "Select a server supporting the Open Reader API"; ObjectID = "zAy-oc-zmb";</note>
+        <target xml:lang="de" state="translated">Wähle einen Server, der das Open Reader API unterstützt</target>
       </trans-unit>
     </body>
   </file>
@@ -1721,6 +1744,11 @@
         <source>%@ received</source>
         <note>Number of bytes received, e.g. 1 MB received</note>
         <target xml:lang="de" state="translated">%@ empfangen</target>
+      </trans-unit>
+      <trans-unit id="%@, %@">
+        <source>%1$@, %2$@</source>
+        <note>{existing authors},{new author name}</note>
+        <target xml:lang="de" state="translated">%1$@, %2$@</target>
       </trans-unit>
       <trans-unit id="%d new articles retrieved">
         <source>%d new articles retrieved</source>
@@ -1766,6 +1794,14 @@
         <source>A folder with that name already exists</source>
         <note>No comment provided by engineer.</note>
         <target xml:lang="de" state="translated">Ein Ordner mit dem Namen existiert bereits</target>
+      </trans-unit>
+      <trans-unit id="A new plugin has been installed. It is now available from the menu and you can add it to the toolbar.">
+        <source>A new plugin has been installed. It is now available from the menu and you can add it to the toolbar.</source>
+        <note>No comment provided by engineer.</note>
+        <target xml:lang="de" state="translated">Ein neues Plugin wurde installiert. Du kannst es im Menü aufrufen und zur Werkzeugleiste hinzugfügen.</target>
+        <alt-trans>
+          <target xml:lang="de">Ein neues Plugin wurde installiert. Es ist jetzt im Menü verfügbar und kann zur Werkzeugleiste hinzugefügt werden.</target>
+        </alt-trans>
       </trans-unit>
       <trans-unit id="Advanced">
         <source>Advanced</source>
@@ -1816,6 +1852,11 @@
         <source>Appearance</source>
         <note>Toolbar item name for the Appearance preference pane</note>
         <target xml:lang="de" state="translated">Erscheinungsbild</target>
+      </trans-unit>
+      <trans-unit id="AppleScript Error in '%@' script">
+        <source>AppleScript Error in '%@' script</source>
+        <note>No comment provided by engineer.</note>
+        <target xml:lang="de" state="translated">AppleScript Fehler in Script '%@'</target>
       </trans-unit>
       <trans-unit id="Articles">
         <source>Articles</source>
@@ -2222,6 +2263,11 @@
         <note>No comment provided by engineer.</note>
         <target xml:lang="de" state="translated">Die nächste Seite anzeigen</target>
       </trans-unit>
+      <trans-unit id="Got HTTP status 304 - No news from last check">
+        <source>Got HTTP status 304 - No news from last check</source>
+        <note>No comment provided by engineer.</note>
+        <target xml:lang="de" state="translated">HTTP-Statusmeldung 304 - keine neuen Nachrichten</target>
+      </trans-unit>
       <trans-unit id="HTTP code %d reported from server">
         <source>HTTP code %d reported from server</source>
         <note>No comment provided by engineer.</note>
@@ -2262,6 +2308,11 @@
         <note>No comment provided by engineer.</note>
         <target xml:lang="de" state="translated">Abonnements aus OPML-Datei importieren?</target>
       </trans-unit>
+      <trans-unit id="Improper infinitely looping URL redirect to %@">
+        <source>Improper infinitely looping URL redirect to %@</source>
+        <note>No comment provided by engineer.</note>
+        <target xml:lang="de" state="translated">Ungültige unendliche Schleifen-URL-Umleitung nach %@</target>
+      </trans-unit>
       <trans-unit id="Invalid style body">
         <source>Invalid style body</source>
         <note>No comment provided by engineer.</note>
@@ -2286,6 +2337,11 @@
         <source>Link</source>
         <note>Data field name visible in menu/article list</note>
         <target xml:lang="de" state="translated">Link</target>
+      </trans-unit>
+      <trans-unit id="Loading">
+        <source>Loading</source>
+        <note>No comment provided by engineer.</note>
+        <target xml:lang="de" state="translated">Lade ...</target>
       </trans-unit>
       <trans-unit id="Loading…">
         <source>Loading…</source>
@@ -2498,6 +2554,11 @@
         <note>No comment provided by engineer.</note>
         <target xml:lang="de" state="translated">Abspielen</target>
       </trans-unit>
+      <trans-unit id="Plugin installed">
+        <source>Plugin installed</source>
+        <note>No comment provided by engineer.</note>
+        <target xml:lang="de" state="translated">Plugin installiert</target>
+      </trans-unit>
       <trans-unit id="Preferences" approved="yes">
         <source>Preferences</source>
         <note>Title of the Preferences window</note>
@@ -2548,6 +2609,11 @@
         <source>Recents</source>
         <note>No comment provided by engineer.</note>
         <target xml:lang="de" state="translated">Letzte</target>
+      </trans-unit>
+      <trans-unit id="Redirection attempt treated as temporary for safety concern">
+        <source>Redirection attempt treated as temporary for safety concern</source>
+        <note>No comment provided by engineer.</note>
+        <target xml:lang="de" state="translated">Weiterleitung wurde aus Sicherheitsgründen als temporär behandelt</target>
       </trans-unit>
       <trans-unit id="Refresh All Subscriptions">
         <source>Refresh All Subscriptions</source>
@@ -2729,6 +2795,11 @@
         <note>No comment provided by engineer.</note>
         <target xml:lang="de" state="translated">Papierkorb</target>
       </trans-unit>
+      <trans-unit id="URL">
+        <source>URL</source>
+        <note>URL</note>
+        <target xml:lang="de" state="translated">URL</target>
+      </trans-unit>
       <trans-unit id="Unread">
         <source>Unread</source>
         <note>No comment provided by engineer.</note>
@@ -2854,6 +2925,16 @@
         <note>test for a date</note>
         <target xml:lang="de" state="translated">ist an oder vor</target>
       </trans-unit>
+      <trans-unit id="not under">
+        <source>not under</source>
+        <note>test for a folder (not operational as of Vienna 3.2)</note>
+        <target xml:lang="de" state="translated">nicht unter</target>
+      </trans-unit>
+      <trans-unit id="under">
+        <source>under</source>
+        <note>test for a folder (not operational as of Vienna 3.2)</note>
+        <target xml:lang="de" state="translated">unter</target>
+      </trans-unit>
     </body>
   </file>
   <file original="Resources/Vienna-Info.plist" source-language="en" datatype="plaintext" target-language="de">
@@ -2878,6 +2959,11 @@
       <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="9.0" build-num="9M174d"/>
     </header>
     <body>
+      <trans-unit id="%@, %@">
+        <source>%1$@, %2$@</source>
+        <note>{existing authors},{new author name}</note>
+        <target xml:lang="de" state="translated">%1$@, %2$@</target>
+      </trans-unit>
       <trans-unit id="(No title)">
         <source>(No title)</source>
         <note>No comment provided by engineer.</note>
@@ -3117,6 +3203,16 @@
         <source>is on or before</source>
         <note>test for a date</note>
         <target xml:lang="de" state="translated">ist an oder vor</target>
+      </trans-unit>
+      <trans-unit id="not under">
+        <source>not under</source>
+        <note>test for a folder (not operational as of Vienna 3.2)</note>
+        <target xml:lang="de" state="translated">nicht unter</target>
+      </trans-unit>
+      <trans-unit id="under">
+        <source>under</source>
+        <note>test for a folder (not operational as of Vienna 3.2)</note>
+        <target xml:lang="de" state="translated">unter</target>
       </trans-unit>
     </body>
   </file>
